kubernetes/apps/development/forgejo/app/service-tailscale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-tailscale
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "forgejo"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
